# NGin

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  install_manifest.txt
games/preview/: config.ini  keys.ini  meshes.ini  objects.ini
include/ngin/: interaction.h  io.h  model.h  ngin.h  shader.h  window.h
share/ngin/shaders/: shader.frag  shader.vert
src/: camera.cpp  controls.cpp  controls.h  default_values.h  engine.cpp  ini_parser.cpp  ini_parser.h  init.h  keyboard.cpp  main.cpp  material.cpp  mesh.cpp  object3d.cpp  registry.h  shader.cpp  window.cpp
test/: ini_test.cpp  main.cpp
